Fix for 320px resolution

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -28,6 +28,7 @@ h1 {
 	font-weight: normal;
 	font-size: 2em;
 	margin-bottom: .5em;
+	line-height: 1.1em;
 }
 
 h2 {
@@ -54,7 +55,7 @@ header .profile {
 	border-radius: 129px;
 	-moz-border-radius: 129px;
 	-webkit-border-radius: 129px;
-	margin: 0 19px 0 0; /* GR */
+	margin: 0 19px 19px 0; /* GR */
 }
 
 header .social {
