--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,6 +1,8 @@
 /* bakeapie.org by t@bakeapie.org */
 /* this beautiful and clean layout has some elements inspired by http://david.heinemeierhansson.com */
 
+/* thanks to paul o'rely for code revision http://orely.me */
+
 * {
 	margin: 0;
 	padding: 0;
@@ -9,8 +11,7 @@
 body {
 	background-color: #fff;
 	color: #222;
-	font-family: Georgia, Times, 'Times New Roman', serif;
-	font-size: 16px;
+	font-family: Georgia, "DejaVu Serif", serif;
 	margin: 80px auto; /* 80px: initial reference for GR */
 	width: 520px;
 	line-height: 1.5em;
@@ -56,6 +57,7 @@ header .profile {
 	-moz-border-radius: 129px;
 	-webkit-border-radius: 129px;
 	margin: 0 19px 19px 0; /* GR */
+	float: left;
 }
 
 header .social {
