--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -12,7 +12,7 @@ body {
 	background-color: #fff;
 	color: #222;
 	font-family: Georgia, "DejaVu Serif", serif;
-	margin: 80px auto; /* 80px: initial reference for GR */
+	margin: 5em auto; /* 5em = 80px = initial reference for GR */
 	width: 520px;
 	line-height: 1.5em;
 }
@@ -47,58 +47,50 @@ header {
 	margin-bottom: 3em;
 }
 
-header .profile {
+.profile {
 	background-size: 100%;
 	display: block;
 	height: 129px; /* GR */
 	width: 129px; /* GR */
 	overflow: hidden;
-	border-radius: 129px;
-	-moz-border-radius: 129px;
-	-webkit-border-radius: 129px;
-	margin: 0 19px 19px 0; /* GR */
+	border-radius: 50%;
+	margin: 0 1.1875em 1.1875em 0; /* GR */
 	float: left;
 }
 
-header .social {
-	font-size: 95%;
+.social {
+	font-size: .95em;
 	line-height: 1.4em;
 	color: #5a5a5a;
 }
 
-header .social a {
+.social a {
 	text-decoration: none;
 	margin-right: .6em;
 }
 
-header .social a:hover {
+.social a:hover {
 	text-decoration: underline;
 }
 
 .caption {
 	display: block;
 	font-style: italic;
-	font-size: 95%;
+	font-size: .95em;
 }
 
 @media screen and (max-width: 520px) {
 	body {
-		margin: 40px auto; /* 40px: initial reference for GR */
-		padding: 0 25px; /* GR */
+		margin: 2.5em auto; /* 2.5em = 40px = initial reference for GR */
+		padding: 0 1.5625em; /* GR */
 		width: auto;
 		word-wrap: break-word;
 	}
 
-	header .profile {
-		background-size: 100%;
-		display: block;
+	.profile {
 		height: 105px; /* GR */
 		width: 105px; /* GR */
-		overflow: hidden;
-		border-radius: 105px;
-		-moz-border-radius: 105px;
-		-webkit-border-radius: 105px;
-		margin: 0 15px 0 0; /* GR */
+		margin: 0 0.9375em 0 0; /* GR */
 	}
 
 	img {
