Font stack revision

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -11,7 +11,7 @@
 body {
 	background-color: #fff;
 	color: #222;
-	font-family: Georgia, "DejaVu Serif", serif;
+	font-family: Georgia, "Century Schoolbook L", serif;
 	margin: 5em auto; /* 5em = 80px = initial reference for GR */
 	width: 520px;
 	line-height: 1.5em;
